style.css
body {
    margin: auto;
    background-color: #767B7E;
    overflow: hidden;
}

/*INDEX/////////////////////////////////////////////////////////////////////*/

#events {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(270px, auto));
}

#indexContentWrap {
    overflow-y: auto;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    overflow-y: auto;
    position: absolute;
}

.singleEvent {
    margin: 0px 0px auto auto;
    display: grid;
    grid-template-rows: auto 80px;
    ;
    cursor: pointer;
}

.imgPlace {
    height: 155px;
    width: 240px;

    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.textInfo {
    position: relative;
}

.title,
.date,
.genre,
.cat {
    position: absolute;
    margin: 5px 0;
    font-size: 10pt;
    text-transform: capitalize;
    font-family: 'Special Elite', cursive;
    font-weight: 500;
    color: white;
}

.date {
    right: 0;
    top: 0;
}

#shortInfo {
    top: 20px;
    position: absolute;
    width: 100%;
}

.title {
    position: static;
}

.genre {
    position: static;
    text-transform: capitalize;
}

/*PAGE PLUS TRIANGLE*/

.pagePlus {
    width: 0;
    height: 0;
    border-left: 50px solid transparent;
    border-right: 50px solid transparent;
    border-top: 50px solid white;
    position: relative;
    margin: 30px auto;
    cursor: pointer;
}

#plus1,
#plus2 {
    position: absolute;
    top: -32px;
    left: -11.5px;
    z-index: 20;
    background-color: #767B7E;
    width: 23px;
    height: 1px;
}

#plus2 {
    transform: rotate(90deg)
}

/*BURGER MENU*/

#bar1,
#bar2,
#bar3,
#bar4,
#bar5 {
    width: 32px;
    height: 3px;
    background-color: white;
    margin: 7px 0;
    transition: all 0.5s;
}

#bar1.invisible,
#bar3.invisible {
    opacity: 0;
}

#bar2 {
    width: 45px;
}

#bar2.change {
    background-color: #767B7E;
}

#bar4,
#bar5 {
    width: 13px;
    position: absolute;
    transform: rotate(45deg);
    right: -3px;
    top: 6px;
    transition: all 0.5s;
}

#bar5 {
    transform: rotate(-45deg);
    top: 14px;
}

#bar4.change {
    transform: rotate(-45deg);
}

#bar5.change {
    transform: rotate(45deg);
}

#bar4.change,
#bar5.change {
    background-color: #767B7E;
    right: 36px;
}

.slideMenu {
    width: 60vw;
    height: auto;
    position: absolute;
    z-index: 2;
    background-color: white;
    transition: all 0.5s;
    border: solid #767B7E 1px;
}

.slideMenu.hidden {
    transform: translateX(-61vw);
}

.slideMenu a,
.slideMenu h2 {
    color: #767B7E;
    font-family: 'Molengo';
    margin: 20px;
    text-decoration: underline;
    cursor: pointer;
}

#AllEvt {
    display: block;
    margin: 20px;
}

ul {
    margin-bottom: 30px;
}

ul li {
    list-style-type: none;
    margin-bottom: 10px;
}

.burgerMenu {
    cursor: pointer;
    top: 8px;
    margin-left: 10px;
    position: absolute;
    z-index: 5;
    transition: all 0.5s;
}

.burgerMenu.slide {
    margin-left: 145px;
}

/*.burgerTransform {
    animation: moveArrow 0.7s forwards;
}

.burgerTransformBack {
    animation: moveArrow 0.7s reverse;
}

@keyframes moveArrow {
    from {
        left: 10px;
    }
    to {
        left: 115px;
    }
}*/

.dontDisplay {
    display: none;
}

/*SUBPAGE///////////////*/

#subpage {
    overflow: auto;
    /* overflow-x: hidden;*/
}

#poster {
    width: 100vw;
    max-width: 762px;
}

#heading {
    display: grid;
    grid-template-columns: 1fr 1fr
}

#title {
    grid-column: 1/3;
}

#date,
#title,
#genre {
    margin: 10px auto auto auto;
    text-transform: capitalize;
    font-family: 'Special Elite';
    font-weight: 500;
    color: white;
}

#genre,
#title,
#description {
    margin-left: 30px;
}

#description a {
    color: #A1D8FE;
}

#description {
    font-family: 'Molengo';
    color: white;
    width: 83vw;
    margin: 40px 0px 30px 30px;
}

#backFromSubP {
    position: absolute;
    width: 60px;
    left: 40px;
    cursor: pointer;
    font-family: 'Special Elite';
    color: white;
    text-align: center;
    font-size: 12px;
    padding-bottom: 1px;
}

#arrowWrap {
    position: relative;
    z-index: 2;

}

#backArrow1,
#backArrow2 {
    position: absolute;
    background-color: white;
    height: 2px;
}

#backArrow1 {
    top: -15px;
    width: 60px;
}

#backArrow2 {
    transform: rotate(42deg);
    width: 20px;
    top: -8px;
    left: -2px;
}

/*.slideAnimation{
    animation: slide 0.3s forwards;
}
@keyframes slide{
}*/

